fix: add missing dark mode blue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,6 +31,7 @@
     --gray: 67, 76, 94;
     --gray-light: 76, 86, 106;
     --gray-dark: 59, 66, 82;
+    --blue: 136, 192, 208;
   }
 }
 
